# raven

./: .dockerignore  .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LLM_ROADMAP.md  README.md  TODO.md  brot.opam  cast.ml  conf-hdf5.opam  conf-hdf5.opam.template  dev.opam  dune  dune-project  dune-workspace  dune-workspace.tsan  fehu.opam  gen_cast.py  hugin.opam  kaun.opam  nx-datasets.opam  nx-text.opam  nx.opam  nx.opam.template  opam  quill.opam  raven.opam  rune.opam  saga.opam  sowilo.opam  talon.opam  test_quote2.ml  test_unsafe_set_bug.ml  tolk.opam  viewer.txt  xla.opam
dev/_nx-cuda/: dune
dev/_nx-cuda/bindings/: dune
dev/_nx-cuda/kernels/: dune
dev/conv2d/: README.md  bench_conv.ml  dune  nx_conv.ml  optimization_log.md  test_conv.ml
dev/conv2d/patches/: 00_baseline.patch  01_correlate_nd_reduce_contiguous.patch
dev/conv2d/src/: bench_conv.ml  dune  nx_conv.ml  test_conv_optimized.ml
dev/fehu/: README.md  dune-project
dev/fehu/docs/: RL_Introduction-REINFORCE.html  RL_Introduction-REINFORCE.md  raven_framework_overview.md
dev/fehu/envs/: classic.ml  dune  sokoban.ml
dev/fehu/example/: backoff_tabular.ml  cartpole_random.ml  compare_algorithms.ml  dqn_cartpole.ml  dune  sokoban_dqn.ml  sokoban_grpo.ml  sokoban_reinforce.ml  test_deadlock.ml  test_dqn_curriculum.ml  test_room_gen.ml  test_solvability.ml  test_visualization.ml  visualize_logs.ml
dev/fehu/lib/: dune  fehu.ml  fehu.mli  visualization.ml  visualization.mli
dev/fehu/test/: dune  test_fehu.ml
dev/mimir/: README.md  dune-project
dev/mimir/lib/: dune  mimir.ml  mimir.mli  sampler.ml  sampler.mli  string_util.ml
dev/nx-oxcaml/lib/: ba_stubs.c  dune  import.ml  internal.ml  nx_backend.ml  nx_oxcaml.ml  nx_oxcaml.mli  op_assign.ml  op_cast.ml  op_cat.ml  op_contiguous.ml  op_fold.ml  op_gather.ml  op_matmul.ml  op_pad.ml  op_scatter.ml  op_unfold.ml  ops_binary.ml  ops_unary.ml  parallel.ml  reduce_ops.ml  simd_sse.ml  simd_stubs.c
dev/nx-oxcaml/lib-simd/: dune  float16x8.ml  float32x4.ml  float64x2.ml  import.ml  int16x8.ml  int32x4.ml  int64x2.ml  int8x16.ml  simd_types.ml
dev/nx-oxcaml/simd/: dune
dev/oxcaml-expts/: dune-project  oxcaml-expts.opam
dev/oxcaml-expts/expts/: bench_add.ml  bench_sub.ml  dune
dev/oxcaml-expts/lib/: dune  nx_oxcaml.ml  nx_oxcaml_binary.ml  parallel_pool.ml
dev/oxcaml-expts/test/: dune
dev/projects/ndarray-cuda/: dune  ndarray_cuda_priv.ml  ndarray_cuda_stubs.c
dev/quill/: dune-project  quill.opam.template
dev/quill/example/: demo.md
dev/quill/plugins/: dune
dev/talon/: dune-project  talon.opam
dev/umbra/: README.md  dune-project
kaun/test/: dune  test_attention.ml  test_checkpoint.ml  test_checkpoint_tree.ml  test_data.ml  test_dataset.ml  test_datasets_integration.ml  test_grad.ml  test_gradients_vs_jax.ml  test_huggingface.ml  test_init.ml  test_layer.ml  test_loss.ml  test_metrics.ml  test_optim.ml  test_optimizer.ml  test_ptree.ml  test_sampler.ml  test_train.ml  test_training.ml  test_transformers.ml
ndarray-cv/example/: canny.ml  common.ml  dune  gaussian_blur.ml  grayscale.ml  median_blur.ml  morphology.ml  sobel.ml  threshold.ml
ndarray/test/: dune  test_ndarray.expect  test_ndarray.ml  test_ndarray_basics.ml  test_ndarray_indexing.ml  test_ndarray_linalg.ml  test_ndarray_manipulation.ml  test_ndarray_ops.ml
nx-cv/example/: canny.ml  common.ml  dune  gaussian_blur.ml  grayscale.ml  median_blur.ml  morphology.ml  sobel.ml  threshold.ml
nx-datasets/example/: airline.ml  breast_cancer.ml  california.ml  cifar10.ml  diabetes.ml  dune  iris.ml  mnist.ml
nx-oxcaml/: dune-project
nx-oxcaml/bench/: bench_nx_oxcaml.ml
nx-oxcaml/lib/: dune  import.ml  nx_backend.ml  nx_oxcaml_stubs.c  op_argmax.ml  op_associative_scan.ml  op_fold.ml  op_gather.ml  op_scatter.ml  op_threefry.ml  simd_neon.ml
nx-oxcaml/test/: dune  test_nx_oxcaml.ml
nx/bench/: README.md  bench_conv.ml  bench_numpy.py  bench_nx.ml  bench_nx_c.ml  bench_nx_cblas.ml  bench_nx_metal.ml  bench_nx_native.ml  bench_nx_native_add.ml  dune  results.numpy.md  results.nx.md
nx/test/: dune  fft_numpy_reference.py  test_backend_c.ml  test_backend_cblas.ml  test_backend_metal.ml  test_backend_native.ml  test_nx_basics.ml  test_nx_datasets.ml  test_nx_extended_dtypes.ml  test_nx_fft.ml  test_nx_indexing.ml  test_nx_io.ml  test_nx_io_hdf5.ml  test_nx_linalg.ml  test_nx_manipulation.ml  test_nx_neural_net.ml  test_nx_ops.ml  test_nx_rng.ml  test_nx_sanity.ml  test_nx_sorting.ml  test_nx_support.ml
quill/plugins/: dune
rune/test/: dune  test_advanced_grad.ml  test_autodiff.ml  test_grad_ops.ml  test_gradcheck.ml  test_jit.ml  test_jit_advanced.ml  test_jit_metal.ml  test_jvp.ml  test_rng.ml  test_rune.expect  test_rune.ml  test_vjp.ml  test_vmap.ml  test_xla.ml
sowilo/example/: canny.ml  common.ml  dune  gaussian_blur.ml  grayscale.ml  median_blur.ml  morphology.ml  sobel.ml  threshold.ml
www/: .gitignore  Makefile  README.md  TODO.md  build.sh  dune  dune-project  index.html  soupault.toml
www/docs/: ecosystem-overview.md  index.md  introduction.md  roadmap.md
www/generate/: api.ml  dune  generate.ml  site.ml
www/generate_gallery/: dune  generate_gallery.ml
www/hugin/: index.html
www/plugins/: append_page_title_to_breadcrumbs.lua  style_doc_main.lua
www/process/: dream_process.ml  dune  generate_api_rules.ml  index.ml  sidebar.ml
www/quill/: index.html
www/rune/: index.html
www/site/: brot.html  community.html  docs.css  fehu.html  hugin.html  index.html  kaun.html  ndarray.html  nx.html  odoc.css  quill.html  rune.html  saga.html  sowilo.html  styles.css  talon.html
www/templates/: landing.html  layout_docs.html  layout_docs_fehu.html  layout_docs_hugin.html  layout_docs_kaun.html  layout_docs_lib.html  layout_docs_ndarray.html  layout_docs_nx.html  layout_docs_quill.html  layout_docs_rune.html  layout_docs_saga.html  layout_docs_sowilo.html  layout_docs_talon.html  layout_hugin.html  layout_kaun.html  layout_ndarray.html  layout_quill.html  layout_rune.html  layout_sowilo.html  main.html  project.html
(+2197 files in other folders)
