(dirs :standard \ process)

(rule
 (targets
  (dir build))
 (deps
  (source_tree templates)
  (source_tree site)
  (source_tree docs)
  (source_tree ../nx/doc)
  (source_tree ../rune/doc)
  (source_tree ../kaun/doc)
  (source_tree ../hugin/doc)
  (source_tree ../saga/doc)
  (source_tree ../talon/doc)
  (source_tree ../sowilo/doc)
  (source_tree ../fehu/doc)
  (source_tree ../quill/doc)
  generate/generate.exe)
 (action
  (run generate/generate.exe)))
