(dirs :standard \ process)

(rule
 (targets
  (dir build))
 (deps
  (source_tree templates)
  (source_tree site)
  (source_tree docs)
  (source_tree ../nx/doc)
  (source_tree ../rune/doc)
  (source_tree ../kaun/doc)
  (source_tree ../hugin/doc)
  (source_tree ../brot/doc)
  (source_tree ../talon/doc)
  (source_tree ../sowilo/doc)
  (source_tree ../fehu/doc)
  (source_tree ../quill/doc)
  (source_tree ../nx/examples)
  (source_tree ../rune/examples)
  (source_tree ../kaun/examples)
  (source_tree ../hugin/examples)
  (source_tree ../brot/examples)
  (source_tree ../talon/examples)
  (source_tree ../sowilo/examples)
  (source_tree ../fehu/examples)
  (source_tree ../quill/examples)
  generate/generate.exe)
 (action
  (run generate/generate.exe)))
