(dirs :standard \ process)

(rule
 (targets
  (dir build))
 (deps
  (source_tree templates)
  (source_tree site)
  (source_tree ../doc)
  (source_tree ../packages/nx/doc)
  (source_tree ../packages/rune/doc)
  (source_tree ../packages/kaun/doc)
  (source_tree ../packages/hugin/doc)
  (source_tree ../packages/brot/doc)
  (source_tree ../packages/talon/doc)
  (source_tree ../packages/sowilo/doc)
  (source_tree ../packages/fehu/doc)
  (source_tree ../packages/quill/doc)
  (source_tree ../packages/nx/examples)
  (source_tree ../packages/rune/examples)
  (source_tree ../packages/kaun/examples)
  (source_tree ../packages/hugin/examples)
  (source_tree ../packages/brot/examples)
  (source_tree ../packages/talon/examples)
  (source_tree ../packages/sowilo/examples)
  (source_tree ../packages/fehu/examples)
  (source_tree ../packages/quill/examples)
  generate/generate.exe)
 (action
  (run generate/generate.exe)))
