(library
 (enabled_if
  (not
   (= %{system} "macosx")))
 (name nx_cuda)
 (public_name rune.cuda.private)
 (libraries nx_core nx_c cuda cuda_kernels)
 (modules nx_cuda))

(rule
 (enabled_if
  (not
   (= %{system} "macosx")))
 (targets nx.ml)
 (action
  (with-stdout-to
   nx.ml
   (run echo "include Nx_cuda"))))

(library
 (enabled_if
  (not
   (= %{system} "macosx")))
 (name nx_cuda_impl)
 (libraries nx_cuda)
 (modules nx)
 (implements nx))
