(library
 (name nx_conv)
 (modules nx_conv)
 (libraries nx_core nx_native landmarks)
 (instrumentation
  (backend landmarks)))

(executable
 (name bench_conv)
 (modules bench_conv)
 (libraries nx nx_conv ubench unix)
 (instrumentation
  (backend landmarks)))

(test
 (name test_conv)
 (modules test_conv)
 (libraries nx nx_conv alcotest test_nx_support))
