(lang dune 3.20)

(name oxcaml-expts)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
(pin
 (url ../../)
 (package
  (name nx)))

(package
 (name oxcaml-expts)
 (synopsis "High-performance Nx backend using OxCaml's unboxed types")
 (description
  "An experimental backend for Nx that leverages OxCaml's unboxed types for improved performance.")
 (depends
  (ocaml-variants
   (= 5.2.0+ox))
  dune
  nx
  core
  parallel))
