(lang dune 3.19)

(name quill)

(generate_opam_files true)

(using dune_site 0.1)

(source
 (github raven-ml/raven))

(authors "Thibaut Mattio <thibaut.mattio@gmail.com>")

(maintainers "Thibaut Mattio <thibaut.mattio@gmail.com>")

(license ISC)

(pin
 (url ../../)
 (package
  (name nx)))

(pin
 (url ../../)
 (package
  (name nx-datasets)))

(pin
 (url ../../)
 (package
  (name saga)))

(pin
 (url ../../)
 (package
  (name rune)))

(pin
 (url ../../)
 (package
  (name kaun)))

(pin
 (url ../../)
 (package
  (name sowilo)))

(pin
 (url ../../)
 (package
  (name hugin)))

(package
 (name quill)
 (allow_empty)
 (synopsis "Interactive notebook for OCaml data science")
 (description
  "Quill is an interactive notebook application for data exploration, prototyping, and knowledge sharing in OCaml. It provides a Jupyter-like experience with rich visualization and documentation capabilities.")
 (sites
  (lib toplevel_libs))
 (depends
  (ocaml
   (>= 5.2.0))
  dune
  (dune-site
   (>= 3.19.0))
  cmdliner
  wasm_of_ocaml-compiler
  js_of_ocaml-toplevel
  (dream
   (>= 1.0.0~alpha8))
  ppx_deriving_yojson
  cmarkit
  vdom
  brr
  (base64
   (>= 3.1.0))
  nx
  nx-datasets
  saga
  rune
  kaun
  sowilo
  hugin
  (windtrap :with-test))
 (tags
  (notebook interactive-computing data-science literate-programming)))
