(test
 (name test_checkpoint)
 (package kaun)
 (libraries rune kaun kaun.checkpoint alcotest))

(test
 (name test_ptree)
 (package kaun)
 (libraries rune kaun alcotest))

(test
 (name test_dataset)
 (package kaun)
 (libraries rune kaun kaun.dataset alcotest unix yojson))

(test
 (name test_datasets_integration)
 (package kaun)
 (libraries rune kaun kaun.dataset kaun.datasets))
