(tests
 (names
  test_checkpoint
  test_checkpoint_tree
  test_ptree
  test_dataset
  test_metrics
  test_optimizer
  test_training
  test_gradients_vs_jax
  test_huggingface)
 (package kaun)
 (libraries
  rune
  nx
  nx.io
  nx.core
  kaun
  kaun.huggingface
  kaun.models
  nx_buffer
  yojson
  unix
  windtrap))
