(library
 (name common)
 (modules common)
 (libraries nx-io nx-cv hugin))

(executable
 (name grayscale)
 (modules grayscale)
 (libraries common nx-io nx-cv hugin))

(executable
 (name gaussian_blur)
 (modules gaussian_blur)
 (libraries common nx-io nx-cv hugin))

(executable
 (name sobel)
 (modules sobel)
 (libraries common nx-io nx-cv hugin))

(executable
 (name canny)
 (modules canny)
 (libraries common nx-io nx-cv hugin))

(executable
 (name threshold)
 (modules threshold)
 (libraries common nx-io nx-cv hugin))

(executable
 (name median_blur)
 (modules median_blur)
 (libraries common nx-io nx-cv hugin))

(executable
 (name morphology)
 (modules morphology)
 (libraries common nx-io nx-cv hugin))
