(include_subdirs unqualified)

; Copy architecture-specific SIMD module

(rule
 (enabled_if
  (= %{architecture} arm64))
 (targets simd.ml)
 (action (copy simd_neon.ml simd.ml)))

(rule
 (enabled_if
  (= %{architecture} amd64))
 (targets simd.ml)
 (action (copy simd_sse.ml simd.ml)))

(library
 (name nx_oxcaml)
 (public_name nx-oxcaml)
 (implements nx.backend)
 (modules
  (:standard \ simd_neon simd_sse))
 (foreign_stubs
  (language c)
  (names simd_stubs))
 (libraries stdlib_stable stdlib_upstream_compatible))
