(tests
 (names test_autodiff test_gradcheck test_jvp test_rng test_vmap)
 (modules test_autodiff test_gradcheck test_jvp test_rng test_vmap)
 (package rune)
 (libraries rune nx_core alcotest test_rune_support))

(test
 (name test_xla)
 (package rune)
 (modules test_xla)
 (build_if %{lib-available:xla})
 (libraries rune alcotest test_rune_support))

(test
 (name test_jit_metal)
 (package rune)
 (modules test_jit_metal)
 (build_if
  (= %{system} "macosx"))
 (libraries rune alcotest test_rune_support))
