(tests
 (names test_vjp test_gradcheck test_jvp test_rng)
 (package rune)
 (libraries rune nx_core alcotest test_rune_support))

(test
 (name test_vmap)
 (enabled_if false)
 (package rune)
 (modules test_vmap)
 (libraries rune nx_core alcotest test_rune_support))

(test
 (name test_jit_metal)
 (package rune)
 (modules test_jit_metal)
 (build_if
  (= %{system} "macosx"))
 (libraries rune alcotest test_rune_support))
